deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-test
  template:
    metadata:
      labels:
        app: docker-test
    spec:
      containers:
        - name: docker-test
          image: docker-test:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8082
