service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-test
spec:
  selector:
    app: docker-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: LoadBalancer
