ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /hello-world/welcome
            pathType: Prefix
            backend:
              service:
                name: docker-test
                port:
                  number: 80
